--- a/hang_server/hang_server.csproj
+++ b/hang_server/hang_server.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+      <ProjectReference Include="../AudioModule/AudioModule.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\files\" />
   </ItemGroup>
 
